--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "radium": "^0.26.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -35,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://lamp.cse.fau.edu/~csellgren2019/"
 }
